Titleをいい感じにしました

--- a/priv/react.html
+++ b/priv/react.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>md2react playground</title>
+    <title>Erlang Editor</title>
     <meta charset="utf-8"/>
     <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
     <link href='flex.css' rel='stylesheet' type='text/css'>
